--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   <title>SDSeg</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/favicon-NE.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -53,29 +53,38 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">
-              Title of the paper</h1>
+              Catch-Only-One: Non-Transferable Examples for Model-Specific Authorization</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
+               <!-- Zihan Wang, Zhiyong Ma, Zhongkui Ma, Shuofeng Liu, Akide Liu, Derui Wang, Minhui Xue, Guangdong Bai -->
               <span class="author-block">
-                <a href="https://lin-tianyu.github.io/" target="_blank">Tianyu Lin</a><sup>1*</sup></span>
-              <!-- <span class="author-block">
-                <a target="_blank">Zhiguang Chen</a><sup>2</sup>,</span>
+                <a href="https://www.zihan.com.au/" target="_blank">Zihan Wang</a><sup>1,2*</sup></span>
               <span class="author-block">
-                <a href="https://github.com/zzzyzh" target="_blank">Zhonghao Yan</a><sup>3</sup>,</span>
+                <a target="https://www.linkedin.com/in/zhiyong-ma-b4a829322">Zhiyong (Ethan) Ma</a><sup>1*</sup>,</span>
               <span class="author-block">
-                <a href="https://github.com/yuweijiang" target="_blank">Weijiang Yu</a><sup>2*</sup>,</span>
+                <a href="https://zhongkuima.github.io/" target="_blank">Zhongkui Ma</a><sup>1*</sup>,</span>
               <span class="author-block">
-                <a target="_blank">Fudan Zheng</a><sup>2*</sup></span> -->
+                <a target="https://shuofeng-uq.github.io/">Shuofeng Liu</a><sup>1</sup>,</span>
+              <span class="author-block">
+                <a target="https://scholar.google.com/citations?user=1HjSeKgAAAAJ&hl=en">Akide Liu</a><sup>3</sup>,</span>
+               </br>
+              <span class="author-block">
+                <a target="https://neuralsec.github.io/">Derui Wang</a><sup>2</sup>,</span>
+              <span class="author-block">
+                <a target="https://people.csiro.au/x/j/jason-xue">Minhui Xue</a><sup>2</sup>,</span>
+              <span class="author-block">
+                <a target="https://baigd.github.io/">Guangdong Bai</a><sup>1</sup>,</span>
             </div>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <sup>1</sup>Institution<br>
-                <!-- {<sup>1</sup>School of Biomedical Engineering, 
-                <sup>2</sup>School of Computer Science and Engineering}, Sun Yat-sen University<br>
-                <sup>3</sup>International School, Beijing University of Posts and Telecommunications -->
+                <sup>1</sup>The University of Queensland
+                <br>
+                <sup>2</sup>CSIRO's Data61
+                <br>
+                <sup>3</sup>Monash University
               </span>
-              <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author</small></span><br>
-              <span class="author-block" style="background: linear-gradient(to right, rgb(255, 0, 0), rgb(0, 255, 0), rgb(0, 0, 0)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;line-height: 1.5;"><b>Conference/Journal Name</b></span>
+              <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author</small></span><br> -->
+              <!-- <span class="author-block" style="background: linear-gradient(to right, rgb(255, 0, 0), rgb(0, 255, 0), rgb(0, 0, 0)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;line-height: 1.5;"><b>Conference/Journal Name</b></span> -->
             </div>
 
 
@@ -83,7 +92,7 @@
               <div class="publication-links">
             <!-- ArXiv abstract Link -->
             <span class="link-block">
-              <a href="https://arxiv.org/abs/2406.18361" target="_blank"
+              <a href="https://arxiv.org/abs/2510.10982" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="ai ai-arxiv"></i>
@@ -94,7 +103,7 @@
 
               <!-- Arxiv PDF link -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2406.18361.pdf" target="_blank"
+                <a href="https://arxiv.org/pdf/2510.10982.pdf" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
@@ -105,7 +114,7 @@
 
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/lin-tianyu/Stable-Diffusion-Seg" target="_blank"
+                  <a href="https://github.com/model-specific/non-transferable-examples" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -127,8 +136,8 @@
   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
-        <img src="static/images/framework-v2.jpg" alt="MY ALT TEXT" , width="700" />
-        <h4 class="subtitle has-text-centered">The overview of the proposed method.</h4>
+        <img src="static/images/vlm-demo.png" alt="MY ALT TEXT" , width="700" />
+        <h4 class="subtitle has-text-centered">To update.</h4>
       </div>
     </div>
   </section>
@@ -143,9 +152,9 @@
         </div>
       </div>
       <p>
-        🌟 Highlights are the summary of the proposed work. They can be contributions in the paper or preferred key points.<br>
-        🌟 Point 2
-        
+        🌟 Keeps your authorized (intended) model accurate while any other models on the same inputs fail.<br>
+        🌟 Lightweight and production-friendly, able to process the entire ImageNet dataset within seconds.<br>
+        🌟 Backed by strong theoretical bounds that quantify unauthorized degradation via spectral misalignment.<br>
       </p>
     </div>
   </section>
@@ -157,7 +166,7 @@
           <h2 class="title is-2" style="background: linear-gradient(to right,  indigo, indigo, skyblue, indigo, indigo); -webkit-background-clip: text; -webkit-text-fill-color: transparent;line-height: 1.5;">
             Motivation</h2>
         <h5 class="title is-5" style="text-align: center;">
-          Using a single sentence to summarize the motivation of the paper.
+          Recent AI regulations call for data that remain useful for innovation while resistant to misuse, balancing utility with protection at the model level. </br></br> Existing works either perturb data to make it unlearnable or retrain models to suppress transfer.
         </h5>
 
         <div class="columns is-centered">
@@ -166,8 +175,7 @@
           <div class="content">
             <h4 class="title is-5" style="text-align: center;">🔒 Challenges</h4>
             <p>
-            (1) blablabla<br>
-            (2) blablabla
+             Neither governs inference by unknown models, and both typically require control over training.
             </p>
           </div>
         </div>
@@ -179,8 +187,7 @@
             <div class="column content">
               <p>
               <!-- <br> -->
-            (1) blablabla<br>
-            (2) blablabla
+            Non-transferable examples (NEs), a training-free and data-agnostic input-side usage-control mechanism. 
               </p>
             </div>
           </div>
@@ -189,8 +196,8 @@
       </div>
 
             <div class="hero-body">
-              <img src="static/images/LatentRep.jpg" alt="MY ALT TEXT" , width="1000" />
-              <h4 class="subtitle has-text-centered"><b>Caption of the figure.</b></h4>
+              <img src="static/images/sheep.png" alt="MY ALT TEXT" , width="1000" />
+              <h4 class="subtitle has-text-centered"><b>TO UPDATE</b></h4>
               Detailed descriptions.
             </div>
         </div>
@@ -239,101 +246,17 @@
    <!-- End video carousel -->
   </section>
 
-  <section class="section hero">
-    <div class="container is-max-desktop">
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          <h2 class="title is-2" style="background: linear-gradient(to right,  indigo, indigo, skyblue, indigo, indigo); -webkit-background-clip: text; -webkit-text-fill-color: transparent;line-height: 1.5;">
-            Module 2</h2>
-            <h5 class="title is-5" style="text-align: center;">
-            Single sentence to summarize the second module of the paper.
-            </h5>
-            <p style="text-align: left;">
-              <b>👉 Key point 1</b>: bnlablabla.<br>
-              <b>👉 Key point 2</b>: blablabla.
-
-            </p>
-            <div class="hero-body">
-              <img src="static/images/StabilityEvaluationV4.jpeg" alt="MY ALT TEXT" , width="1000" />
-              <h2 class="subtitle has-text-centered"><b>Caption of the figure.</b></h2>
-            </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section hero is-light">
-    <div class="container is-max-desktop">
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          <h2 class="title is-2" style="background: linear-gradient(to right,  indigo, indigo, skyblue, indigo, indigo); -webkit-background-clip: text; -webkit-text-fill-color: transparent;line-height: 1.5;">
-            Other Qualitative Analysis</h2>
-            <div class="hero-body">
-              <img src="static/images/Conditioner.png" alt="MY ALT TEXT" , width="900" />
-              <h2 class="subtitle has-text-centered"><b>Caption of the figure.</b></h2>
-                  Detailed descriptions.
-            </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- Video carousel -->
-  <!-- <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <source src="static/videos/carousel1.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <source src="static/videos/carousel2.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <source src="static/videos/carousel3.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>  -->
-  <!-- End video carousel -->
-
-
-
-
-
-
-  <!-- Paper poster -->
-  <!-- <section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550"></iframe>
-      </div>
-    </div>
-  </section> -->
-  <!--End paper poster -->
-
 
   <!--BibTex citation -->
   <section class="section hero" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTex</h2>
       <pre><code>
-        @inproceedings{lin2024stable,
-          title={Stable Diffusion Segmentation for Biomedical Images with Single-step Reverse Process},
-          author={Lin, Tianyu and Chen, Zhiguang and Yan, Zhonghao and Yu, Weijiang and Zheng, Fudan},
-          booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
-          year={2024},
-          organization={Springer}
+        @inproceedings{wang2025nontransfer,
+          title={Catch-Only-One: Non-Transferable Examples for Model-Specific Authorization},
+          author={Wang, Zihan and Ma, Ethan and Ma, Zhongkui and Liu, Shuofeng and Liu, Akide and Wang, Derui and Xue, Minhui and Bai, Guangdong},
+          booktitle={arXiv preprint arXiv:2510.10982},
+          year={2025}
         }        
       </code></pre>
     </div>
